2016-05-11 Michele Pinamonti <michele.pinamonti@gmail.com>, Valerio Dao <valerio.dao@cern.ch>
        * Pruning functionality fixed
        
2016-05-09 Michele Pinamonti <michele.pinamonti@gmail.com>, Valerio Dao <valerio.dao@cern.ch>
        * Pruning functionality (and plot) improved

2016-05-06 Michele Pinamonti <michele.pinamonti@gmail.com>, Valerio Dao <valerio.dao@cern.ch>
        * Systematic decorrelation options added (still to document)
        * Bug fix for running from histograms
        * Option added to run on an externally produced workspace (need to specify "WorkspaceFileName" in the config)
        
2016-04-29 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Functionality added to re-run smoothing after input histograms are created (new option "b")
        * Empty bin warnings now on only in debug mode
        
2016-04-26 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fixed auto-binning for histo inputs (thanks Ian)
        * Generation of Asimov within the fitter skipped if no data in any region (i.e. skipping DumpData method)
        
2016-04-15 Michele Pinamonti <michele.pinamonti@gmail.com>
        * new option for systematics added (StoredName), which allows to specify a different name for storing in (and reading from) the .root files under Histograms/
        
2016-04-14 Michele Pinamonti <michele.pinamonti@gmail.com>
        * simple/minimal workspace combination method added to MultiFit (to test!)
        * example added for usage of MultiFit
        
2016-04-08 Michele Pinamonti <michele.pinamonti@gmail.com>
        * InputFolder option added, to use intermediate histograms stored in a directory other than <job-name>/Histograms/
        * Fix in MultiFit::ComparePulls

2016-04-03 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Post-fit syst tables added (created while running the p option)
        * Post-fit uncertainty small fix (relevant with large pulls) - to check!
